@@ -12,6 +12,7 @@
     <groupId>bibonne.exp.oas-cache</groupId>
     <artifactId>metadata-webimpl</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>21</java.version>
@@ -54,6 +55,7 @@
 
 
     <build>
+        <finalName>metadata</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -61,6 +63,9 @@
                 <configuration>
                     <parameters>true</parameters>
                     <enablePreview>true</enablePreview>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
